2002-11-05  Bruno Haible  <bruno@clisp.org>

	* gcd.h: New file, from gettext-0.11.5.
	* gcd.c: New file, from gettext-0.11.5.

2002-11-05  Bruno Haible  <bruno@clisp.org>

	* error.c [!_LIBC]: Include gettext.h instead of <libintl.h>.
	* getopt.c [!_LIBC]: Include gettext.h instead of <libintl.h>.
	* obstack.c [!_LIBC]: Include gettext.h instead of <libintl.h>.
	* regex.c [!_LIBC]: Include gettext.h instead of <libintl.h>.

	* argmatch.c: Include gettext.h instead of <locale.h> and <libintl.h>.
	* makepath.c: Include gettext.h instead of <locale.h> and <libintl.h>.

	* closeout.c: Include gettext.h instead of <libintl.h>.
	* human.c: Include gettext.h instead of <libintl.h>.
	* quotearg.c: Include gettext.h instead of <libintl.h>.
	* rpmatch.c: Include gettext.h instead of <libintl.h>.
	* unicodeio.c: Include gettext.h instead of <libintl.h>.
	* userspec.c: Include gettext.h instead of <libintl.h>.
	* version-etc.c: Include gettext.h instead of <libintl.h>.
	* xmalloc.c: Include gettext.h instead of <libintl.h>.
	(textdomain): Remove definition.
	* xmemcoll.c: Include gettext.h instead of <libintl.h>.

	* long-options.c: Remove include of <libintl.h> and definition of _.
	* same.c: Remove include of <libintl.h> and definition of _.

2002-11-04  Bruno Haible  <bruno@clisp.org>

	* stpcpy.h: New file, from GNU gettext-0.11.5.
	* strcase.h: New file, from GNU gettext-0.11.5.
	* strpbrk.h: New file, from GNU gettext-0.11.5.
	* strstr.h: New file, from GNU gettext-0.11.5.
	* xgetcwd.h: New file, from GNU gettext-0.11.5.

2002-05-09  Bruno Haible  <bruno@clisp.org>

	* config.charset: Update for newest glibc. Add canonical names
	ISO-8859-14, KOI8-T, TCVN5712-1, GEORGIAN-PS.

2002-05-09  Bruno Haible  <bruno@clisp.org>

	* localcharset.c (get_charset_aliases): Add more Windows specific
	aliases.

2002-05-08  Owen Taylor  <otaylor@redhat.com>

	* config.charset: A few additions for Solaris.

2001-12-05  Bruno Haible  <bruno@clisp.org>
