@@ -1,3 +1,8 @@
+2002-11-06  Bruno Haible  <bruno@clisp.org>
+
+	* gcd.h (gcd): Change argument type to 'unsigned long'.
+	* gcd.c (gcd): Likewise.
+
 2002-11-05  Bruno Haible  <bruno@clisp.org>
 
 	* gcd.h: New file, from gettext-0.11.5.
